--- a/config/server.properties
+++ b/config/server.properties
@@ -23,7 +23,7 @@ spawn-animals=true
 hardcore=false
 snooper-enabled=true
 resource-pack-sha1=
-online-mode=true
+online-mode=false
 resource-pack=
 pvp=true
 difficulty=1
