--- a/config/server.properties
+++ b/config/server.properties
@@ -1,37 +1,52 @@
 #Minecraft server properties
-#Fri Apr 07 09:27:52 UTC 2023
-generator-settings=
-use-native-transport=true
-op-permission-level=4
-allow-nether=true
-level-name=world
-enable-query=false
+#Thu May 18 09:07:02 GMT 2023
 allow-flight=false
-prevent-proxy-connections=false
-server-port=25565
-max-world-size=29999984
-level-type=DEFAULT
-enable-rcon=false
-level-seed=
-force-gamemode=false
-server-ip=0.0.0.0
-network-compression-threshold=256
-max-build-height=256
-spawn-npcs=true
-white-list=false
-spawn-animals=true
-hardcore=false
-snooper-enabled=true
-resource-pack-sha1=
-online-mode=false
-resource-pack=
-pvp=true
-difficulty=1
+allow-nether=true
+broadcast-console-to-ops=true
+broadcast-rcon-to-ops=true
+difficulty=hard
 enable-command-block=false
-gamemode=0
-player-idle-timeout=0
-max-players=20
-spawn-monsters=true
+enable-jmx-monitoring=false
+enable-query=false
+enable-rcon=false
+enable-status=true
+enforce-whitelist=false
+entity-broadcast-range-percentage=100
+force-gamemode=true
+function-permission-level=2
+gamemode=survival
 generate-structures=true
-view-distance=10
+generator-settings=
+hardcore=false
+level-name=world
+level-seed=
+level-type=default
+max-build-height=256
+max-players=2
+max-tick-time=60000
+max-world-size=29999984
 motd=A Minecraft Server
+network-compression-threshold=256
+online-mode=false
+op-permission-level=4
+player-idle-timeout=0
+prevent-proxy-connections=false
+pvp=true
+query.port=25565
+rate-limit=0
+rcon.password=
+rcon.port=25575
+resource-pack=
+resource-pack-sha1=
+server-ip=
+server-port=25565
+snooper-enabled=true
+spawn-animals=true
+spawn-monsters=true
+spawn-npcs=true
+spawn-protection=16
+sync-chunk-writes=true
+text-filtering-config=
+use-native-transport=true
+view-distance=10
+white-list=false
